spade-tests/src/snapshots/spade_tests__integration__pipeline_shadowing_does_not_fail_silently.snap
---
source: spade-tests/src/integration.rs
---
pipeline(2) main(clk: clk, x: int<8>) -> int<8> {
        let x: int<8> = 0;
    reg;
        let x: int<8> = 1;
    reg;
        stage(-2).x
}


error: Use of undeclared name x
  ┌─ testinput:6:19
  │
6 │         stage(-2).x
  │                   ^ Undeclared name


